<resources>
    <string name="app_name">Duck Hunter</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_password2">Enter your password again</string>
    <string name="text_remember_me">Remember me</string>
    <string name="text_start_game">Start game</string>
    <string name="text_new_user">New user</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_min_length">The password must have at least 8 characters</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="dialog_title_game_end">End of the game</string>
    <string name="dialog_message_congratulations">Congratulations!!\nYou hunted %1$d ducks</string>
    <string name="button_restart">Restart</string>
    <string name="button_close">Close</string>
    <string name="text_hall_of_fame">Hall of fame</string>
    <string name="text_ducks">Ducks</string>
    <string name="text_player">Player name</string>
    <string name="text_new_game">New Game</string>
    <string name="text_play_online">Play Online</string>
    <string name="text_close">Close</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_up">Sign up</string>
</resources>